<resources>
    <string name="app_name">Git</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="button">Button</string>

    <string name="unit_i">UNIT I</string>
    <string name="unit_ii">UNIT II</string>
    <string name="unit_iii">UNIT III</string>
    <string name="unit_iv">UNIT IV</string>
    <string name="unit_vi">UNIT V</string>
</resources>
