<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/images"
    tools:context="com.example.saitarun.git.plp">


    <Button
        android:id="@+id/button98"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_i" />


    <Button
        android:id="@+id/button99"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_ii" />

    <Button
        android:id="@+id/button100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_iii" />

    <Button
        android:id="@+id/button101"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_iv" />

    <Button
        android:id="@+id/button102"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_vi" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
